-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 2.3.0
-
None
-
Windows Vista x64
Open a project which does not have saved user settings. Before the Project Setup dialog appears, various small ghost windows will show up on the screen and vanish right away.
- relates to
-
QTCREATORBUG-4366 Ghost window when opening Options dialog
-
- Closed
-
-
QTCREATORBUG-7652 Ghost window when opening project
-
- Closed
-
-
QTCREATORBUG-30567 Ghost window when configuring project
-
- Closed
-