Open Project: Fix ghost windows

Task-Nr: QTCREATORBUG-4805
Reviewed-By: Robert Loehning